<resources>
    <string name="app_name">Call Recording</string>
    <string name="banner">ca-app-pub-6367750773212736/3626386414</string>
    <string name="inner">ca-app-pub-6367750773212736/8687141405</string>
    <string name="str_access_permissions">Call Recorder needs access to your contacts to identify your call recordings and prevent selected contacts from being recorded.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="txt_screen_setting">Settings</string>
    <string name="receiver_end_call">End Record call</string>
    <string name="receiver_start_call">Start record call</string>
    <string name="record_impossible">Unfortunately, it is not possible to record calls on this device. (Usually because another application/service is using the microphone in the background)</string>
    <string name="notification_text">If recording was enabled, recording should have started, if not you can enable recording in the application, the phone will stop the recording when the conversation ends</string>
    <string name="record_enabled">Call recording enabled</string>
    <string name="record_disabled">Call recording disabled</string>
    <string name="record_auto">State recording is Auto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="donate_title">Donate</string>
    <string name="about_title">About</string>
    <string name="recycle_title">Recycle Bin</string>
    <string name="action_settings">Settings</string>
    <string name="pay_success">Payment Success</string>
    <string name="enable">Enabled</string>
    <string name="disable">Disabled</string>
    <string name="can_recorder">Can play recorder</string>
    <string name="can_openlink">You don\'t have any app that can open this link</string>
    <string name="email_subject">Subject of email</string>
    <string name="email_body">Body of email</string>
    <string name="pin_error_input">Incorrect PIN</string>
    <string name="email_subject_language">TCR Translation</string>
    <string name="email_body_language">I would like to translate TCR to:</string>
    <string name="add_number">Add number</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="number_day">Number of days</string>
    <string name="choosefolder_title">Folder not empty</string>
    <string name="choosefolder_des">Folder is not empty. \nAre you sure you want to use this folder?</string>
    <string name="error">Error:</string>
    <string name="menu_navigation">NAVIGATION</string>
    <string name="menu_recycle">Recycle Bin</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_mail">Feedback</string>
    <string name="menu_help">Help</string>
    <string name="menu_rate">Rate me</string>
    <string name="menu_about">About</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_power">Powered by Mobile Tech</string>
    <string name="tab_all">ALL</string>
    <string name="tab_incoming">INCOMING</string>
    <string name="tab_outgoing">OUTGOING</string>
    <string name="tab_important">IMPORTANT</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="search">Search</string>
    <string name="storage_location_title">Recording Storage Location</string>
    <string name="mail_subject">Call recording</string>
    <string name="mail_body">This is a call recording from my phone</string>
    <string name="send_mail">Send Call Recording</string>
    <string name="option">Play Call Recorder</string>
    <string name="title">Selection Option</string>
    <string name="txt_about">This android application allows you to record all incoming and outgoing calls from your phone.
        \n
        \nAll your recorded calls are saved in 3gp files and can be sent from the application.
\nYou can enable/disable the recording during the call, or leave it enabled to record all the calls.
\n
        \nThe main application screen contains a list of all calls with details of phone numbers, date and time of a call. By selecting one of the items the application will provide you with 3 options:send record and play record.
\n
       \nThis application build by Hai Nguyen Minh ,Android developer, Hà Nội , Việt Nam.
\n
        \nSkype: live: harryhai995
    </string>
    <string name="setting_general">General</string>
    <string name="setting_recording">Recording</string>
    <string name="setting_cloud">Cloud service</string>
    <string name="setting_language">Language</string>
    <string name="setting_update">Update</string>
    <string name="setting_tcr">TCR 27.5</string>
    <string name="tcr_policy">Privacy policy</string>
    <string name="update_ga">Google Analytics</string>
    <string name="language_title">Language</string>
    <string name="language_translation">Translation</string>
    <string name="language_translation_description">Would you like to translate TCR to your own language or fix mistakes in translation? you might get Free TCR License. Tap here to email us to request translation document</string>
    <string name="language_translators">Translators</string>
    <string name="language_translators_description">List of people who helped in the translation of this application</string>
    <string name="language">Language</string>
    <string name="device">Device</string>
    <string-array name="languages_name" translatable="false">
        <item>english</item>
        <item>japan</item>
    </string-array>
    <string name="language_toast">Language will apply when start app</string>
    <string name="general_ask_for_pin">Ask for PIN</string>
    <string name="general_ask_for_pin_sub">Ask for PIN when app opens</string>
    <string name="general_appearance">Appearance</string>
    <string name="general_appearance_sub">Use dark theme</string>
    <string name="general_notice">Notification</string>
    <string name="general_notice_sub">Show notification when enabled</string>
    <string name="general_recyle">Recycle Bin</string>
    <string name="general_recyle_sub">Move delete files to Recycle Bin</string>
    <string name="general_player">Internal media player</string>
    <string name="general_player_sub">Use internal media player to play recordings</string>
    <string name="general_library">Library</string>
    <string name="general_library_sub">Add recordings to music library</string>
    <string name="general_db_maintenance">DB Maintenance</string>
    <string name="general_db_maintenance_sub">Re-populate database from file system</string>
    <string name="recording_title_general">General</string>
    <string name="recording_folder">Recording folder</string>
    <string name="recording_keep">Keep recording prompt</string>
    <string name="recording_keep_sub">Ask whether to keep or delete recording after each call</string>
    <string name="recording_delete">Auto delete</string>
    <string name="recording_delete_sub">Automatically delete recording older than \"X\" day</string>
    <string name="recording_short_record">Delete short recordings</string>
    <string name="recording_short_record_sub">Auto delete recording shorter than X seconds. Set to 0 to disable</string>
    <string name="recording_out_delay">Outgoing recording delay</string>
    <string name="recording_out_delay_sub">Start recording outgoing calls after X seconds </string>
    <string name="recording_incoming_delay">Incoming recording delay</string>
    <string name="recording_incoming_delay_sub">Start recording incoming calls after X secondse</string>
    <string name="recording_excluded">Excluded numbers</string>
    <string name="recording_excluded_sub">Calls to or from numbers in this list will never be recorded</string>
    <string name="recording_included">Included numbers</string>
    <string name="recording_included_sub">Unless in the excluded list, calls to or from numbers in this list will always be recorded</string>
    <string name="recording_title_modes">Recording modes</string>
    <string name="recording_start_recording">Start recording</string>
    <string name="recording_start_recording_sub">Start recording automatically or manually by pressing the record button</string>
    <string name="recording_shake_record">Shke to record</string>
    <string name="recording_shake_record_sub">Shke your phone to start or stop recording when using manual recording mode</string>
    <string name="recording_audio">Audio source</string>
    <string name="recording_audio_sub">Auto is default and should record both sides of the call(if your phone supports call recording). If it doesn\'t work try other audio sources</string>
    <string name="recording_format">Recording format</string>
    <string name="recording_format_sub">Select a recording format</string>
    <string name="recording_audio_gain">Audio gain</string>
    <string name="recording_audio_gain_sub">Adjust audio volume gain in recordings. Only available for certain format s and higher values may cause crackles</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_delete_recorder">Delete recorder?</string>
    <string name="dialog_delete_number">Delete Number ?</string>
    <string name="dialog_delete_item_content">Are you sure you want to delete item of your recordings?</string>
    <string name="dialog_refresh_recorder">Refresh recorder?</string>
    <string name="dialog_refresh_item_content">Are you sure you want to refresh item of your recordings?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="navigate_upwards">Navigate upwards</string>
    <string name="selected_folder">Selected folder</string>
    <string name="new_folder">New folder</string>
    <string name="enter_new_folder_name">Enter name for new folder</string>
    <string name="create_folder_error">Failed to create folder!</string>
    <string name="create_folder_error_no_write_access">Failed to create folder: no write access.</string>
    <string name="create_folder_error_already_exists">Failed to create folder: folder already exists.</string>
    <string name="create_folder_success">Created folder successfully.</string>
    <string name="location_select_manual">Manually select storage location</string>
    <string name="choose_storage_location">Choose storage location</string>
    <string name="recording_transfer">Recording transfer</string>
    <string name="screen_storage_location">Storage Location</string>
    <string name="screen_setting">Settings</string>
    <string name="screen_language">Language</string>
    <string name="screen_recoder">Recording</string>
    <string name="screen_update">Update</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="textNoneNumber">The are no numbers \nTab on the "+"sign to add a number</string>
    <string name="add_note">Add Note</string>
    <string name="pin">PIN</string>
    <string name="pin_error">PIN must be at least 4 digits</string>
    <string name="txt_comfirm">Are you sure to exit ?</string>
    <string name="menu_more">More App</string>
    <string name="menu_paint">Change Theme</string>
    <string name="material_theme_red">Red</string>
    <string name="material_theme_orange">Orange</string>
    <string name="material_theme_green">Green</string>
    <string name="material_theme_blue">Blue</string>
    <string name="material_theme_default">Default</string>
    <string name="set_theme_dialog_title">Set Theme</string>
</resources>