<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/item_navigation_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Switch
                    android:id="@+id/switchAutoDelete"
                    style="@style/SwichStyle"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:theme="@style/SCBSwitchTheme" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/switchPin"
                    android:layout_toStartOf="@+id/switchPin"
                    android:orientation="vertical"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:gravity="center_vertical"
                        android:text="@string/recording_delete"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:gravity="center_vertical"
                        android:text="@string/recording_delete_sub"
                        android:textColor="@color/colorBlack"
                        android:textSize="13sp" />

                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spacing_line"
                android:background="@color/colorGreyButton" />

            <RelativeLayout
                android:id="@+id/layoutStartAuto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp">

                    <TextView
                        android:id="@+id/titleStartAuto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:gravity="center_vertical"
                        android:text="@string/recording_start_recording"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:gravity="center_vertical"
                        android:text="@string/recording_start_recording_sub"
                        android:textColor="@color/colorBlack"
                        android:textSize="13sp" />

                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spacing_line"
                android:background="@color/colorGreyButton" />

            <RelativeLayout
                android:id="@+id/layoutAudioSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp">

                    <TextView
                        android:id="@+id/titleAudioSource"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:gravity="center_vertical"
                        android:text="@string/recording_audio"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:gravity="center_vertical"
                        android:text="@string/recording_audio_sub"
                        android:textColor="@color/colorBlack"
                        android:textSize="13sp" />

                </LinearLayout>

            </RelativeLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spacing_line"
                android:visibility="gone"
                android:background="@color/colorGreyButton" />

            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/layoutAudioFormat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp">

                    <TextView
                        android:id="@+id/titleAudioFormat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:gravity="center_vertical"
                        android:text="@string/recording_format"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:gravity="center_vertical"
                        android:text="@string/recording_format_sub"
                        android:textColor="@color/colorBlack"
                        android:textSize="13sp" />

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>